securitygroup.tf


resource "aws_security_group" "security-Group-rds" {
  name        = "vpc-sg"
  description = "security group for rds"

  vpc_id = aws_vpc.gameshop-vpc.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  # Update with the allowed source IP range
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  # Update with the allowed source IP range
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "rds-security-group"
    Environment = "Production"
  }
}

# create security group for ecs
resource "aws_security_group" "my_security_group" {
  name        = "ecs-sg"
  description = "My ECS cluster security group"
  vpc_id = aws_vpc.gameshop-vpc.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
